# sphinx-inline-tabs

./: .pre-commit-config.yaml  .readthedocs.yml  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.md  usage.md
src/sphinx_inline_tabs/: __init__.py  _impl.py
src/sphinx_inline_tabs/static/: tabs.js
tests/: conftest.py  test_markup.py
tests/docsets/basic/: conf.py  index.rst  markdown.md  restructuredtext.rst
tests/docsets/multiple/: markdown.md  restructuredtext.rst
tests/test_markup/: test_markup_basic_html_markdown_.html  test_markup_basic_html_restructuredtext_.html  test_markup_basic_xml_markdown_.xml  test_markup_basic_xml_restructuredtext_.xml  test_markup_multiple_html_markdown_.html  test_markup_multiple_html_restructuredtext_.html  test_markup_multiple_xml_markdown_.xml  test_markup_multiple_xml_restructuredtext_.xml
