[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name          = "sphinx_inline_tabs"
license       = "MIT"
license-files = ["LICENSE"]
readme        = "README.md"
authors       = [{name = "Pradyun Gedam", email = "mail@pradyunsg.me"}]
requires-python = ">=3.8"
dependencies    = ["sphinx>=3"]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
]
doc = ["myst-parser", "furo"]

[project.urls]
Homepage = "https://github.com/pradyunsg/sphinx-inline-tabs"
Documentation = "https://sphinx-inline-tabs.readthedocs.io"
